# srclib-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Srclibtoolchain  test-me.sh
src/: common.rs  dummy_main.rs  main.rs  resolve.rs  scan.rs  types.rs
