[package]
edition = "2018"
name = "srclib-rust"
version = "0.1.0"
authors = ["Jakub <jakub@jakub.cc>", "Wesley Van Melle <wes@fossa.com>"]

[dependencies]
anyhow = "*"
cargo_metadata = "*"
derive_builder = "*"
glob = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "*"
