[package]
edition = "2018"
name = "srclib-rust"
version = "0.1.0"
authors = ["Jakub <jakub@jakub.cc>", "Wesley Van Melle <wes@fossa.com>"]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.9"
derive_builder = "0.9"
glob = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
